# explore-cuda-jetson-nano

./: README.md
01_hello_world/: CMakeLists.txt  README.md
01_hello_world/src/: hello.cu
02_vector_add/: CMakeLists.txt  README.md
02_vector_add/src/: vector_addition_gpu_block_only.cu  vector_addition_gpu_block_only_man.cu  vector_addition_gpu_thread_block.cu  vector_addition_gpu_thread_block_man.cu  vector_addition_gpu_thread_only.cu
03_soa_aos/: CMakeLists.txt  README.md
03_soa_aos/src/: aos.cu  soa.cu  soa_local.cu
04_matrix_transpose/: CMakeLists.txt  README.md
04_matrix_transpose/src/: matrix_transpose.cu
05_profiling/: CMakeLists.txt  README.md
05_profiling/src/: sgmemm.cu  sgmemm_man.cu
06_tx2_vs_nano/: CMakeLists.txt  README.md
06_tx2_vs_nano/src/: ma4.cu  ma4_bad.cu
